Fixed alignment issue with edit my profile.

--- a/project2-front/src/component/UserProfile/UserDisplay.css
+++ b/project2-front/src/component/UserProfile/UserDisplay.css
@@ -9,6 +9,7 @@
     object-fit: fill !important;
     width: 100% !important;
     height: 100% !important;
+    background-size: cover !important;
 }
 
 .BackButton{
